force-app/main/default/objects/Dependencia_ProductoKit_Materiales__mdt/Dependencia_ProductoKit_Materiales__mdt.object-meta.xml
<CustomObject>
    <description>Dependencia que relaciona productos con los materiales que va a integrar el envio sin cargo</description>
    <label>Dependencia ProductoKit Materiales</label>
    <pluralLabel>Dependencia ProductosKit Materiales</pluralLabel>
</CustomObject>