force-app/main/default/objects/Dependencia_ProductoKit_Materiales__mdt/fields/Alimentacion__c.field-meta.xml
<CustomField>
    <fullName>Alimentacion__c</fullName>
    <description>Tipo de alimentacion del producto que condiciona los materiales del kit</description>
    <label>Alimentacion</label>
    <type>TextArea</type>
</CustomField>