force-app/main/default/objects/Dependencia_ProductoKit_Materiales__mdt/fields/Materiales_Kit__c.field-meta.xml
<CustomField>
    <fullName>Materiales_Kit__c</fullName>
    <description>Materiales que va a acompañar al producto elegido en el envío sin cargo</description>
    <label>Materiales Kit</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>