force-app/main/default/objects/Dependencia_ProductoKit_Materiales__mdt/fields/Producto_Kit__c.field-meta.xml
<CustomField>
    <fullName>Producto_Kit__c</fullName>
    <description>Producto del envío sin cargo</description>
    <label>Producto Kit</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>